<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectBMAK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect_to_computer">Connect to Device</string>
    <string name="title_activity_keyboard">KeyboardActivity</string>
    <string name="global_mouse_label">Mouse</string>
    <string name="title_activity_mouse">MouseActivity</string>
    <string name="global_keyboard_label">Keyboard</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="disconnectDevice">Disconnect Device</string>
    <string name="title_activity_bluetooth_connection">BluetoothConnectionActivity</string>
    <string name="keyboard_Toggle">Keyboard Toggle</string>
    <string name="f_Toggle">F Toggle</string>
    <string name="spec_Functions">Special Fns</string>
    <string name="arrow_Toggle">Arrow Toggle</string>
    <string name="title_activity_alphanumeric_keyboard">AlphanumericKeyboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_f1">F1</string>
    <string name="str_f2">F2</string>
    <string name="str_f3">F3</string>
    <string name="str_f4">F4</string>
    <string name="str_f5">F5</string>
    <string name="str_f6">F6</string>
    <string name="str_f7">F7</string>
    <string name="str_f8">F8</string>
    <string name="str_f9">F9</string>
    <string name="str_f10">F10</string>
    <string name="str_f11">F11</string>
    <string name="str_f12">F12</string>
    <string name="str_escape">Escape</string>
    <string name="str_tab">Tab</string>
    <string name="str_capsLock">Caps Lock</string>
    <string name="str_ctrl">Ctrl</string>
    <string name="str_alt">Alt</string>
    <string name="str_altGr">AltGr</string>
    <string name="str_shift">Shift</string>
    <string name="str_insert">Insert</string>
    <string name="str_home">Home</string>
    <string name="str_pageUp">Page Up</string>
    <string name="str_pageDown">Page Down</string>
    <string name="str_end">End</string>
    <string name="str_delete">Delete</string>
    <string name="str_prtScr">Print Screen</string>
    <string name="str_upArrow">↑</string>
    <string name="str_leftArrow">←</string>
    <string name="str_rightArrow">→</string>
    <string name="str_downArrow">↓</string>

</resources>
